@@ -45,7 +45,7 @@ globDict = dict(
     temp = ('Ambient temperature', 'C', float, 27.),
     abstol = ('Absolute tolerance', 'nodal unit', float, 1e-8),
     reltol = ('Relative tolerance', '', float, 1e-8),
-    maxiter = ('Maximum number of Newton iterations', '', int, 100),
+    maxiter = ('Maximum number of Newton iterations', '', int, 20),
     maxdelta = ('Maximum allowed change in Newton iterations', 
                 'nodal unit', float, 20.),
     errfunc = ("Additional test for error function in Newton's method", 'bool', 
