@@ -101,7 +101,7 @@ ne=0.5 nc=0.5 tr=3000e-9 vje=0.55 vjc=0.55 rc=100  re=10)
 *.analysis dc device=vsin:v1 param=vdc start=-2. stop=2. num=30
 *.analysis ac start=100. stop=1MEG num=100 log=True
 .analysis tran tstep=10us tstop=2ms
-.options maxiter=300 gyr=1e-5 maxdelta=3. sparse=1
+.options gyr=1e-2 maxiter=50 maxdelta=2. sparse=1 
 
 .plot dc 153 151 23
 .plot ac_dB 153 151 23
